--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <div class="container-fluid background-img-2">
     <div class="row">
-      <div class="col-md-4 col-xs-4 col-md-offset-2 col-xs-offset- custom-set">
+      <div class="col-md-4 col-xs-4 col-md-offset-2 col-xs-offset-1 custom-set">
         <span class="custom-text-1">01.</span>
         <span class="custom-heading">HISTORY</span>
       </div>
